<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:id="@+id/fragment_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/blackout_1"
            android:foregroundTint="@color/colorPrimary"
            android:text="My Profile"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:textColor="#FFFFFF"
            android:text="Log Out" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/cameraImage"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:padding="20dp"
            app:srcCompat="@drawable/camera" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:background="@drawable/round_border_text"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/usernameBox"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:ems="10"
                    android:autofillHints="Username"

                    android:hint="@string/username"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">


                <EditText
                    android:id="@+id/emailBox"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:autofillHints="Email"
                    android:inputType="textEmailAddress"


                    android:hint="@string/prompt_email"

                    android:ems="10"
                    />



            </com.google.android.material.textfield.TextInputLayout>





        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/passwordBox"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint = "@string/prompt_password"
                    android:autofillHints="Password"

                    android:inputType="textPassword"
                    android:text="" />


            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/button_save"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button"
                android:text="@string/fui_button_text_save"


                android:textColor="#FFFFFF" />


        </LinearLayout>



    </LinearLayout>










</LinearLayout>