...
        android:id = "@+id/booking"
        android:title="Booking"
        android:icon="@drawable/ic_event_black_24dp"
        />

    <item
        android:id = "@+id/venues"
        android:title="Venues"
        android:icon="@drawable/ic_place_black_24dp"/>

    <item
        android:id = "@+id/events"
        android:title="Events"
        android:icon = "@drawable/ic_event_available_black_24dp"/>

    <item
        android:id = "@+id/profile"
        android:title="Profile"
        android:icon = "@drawable/ic_person_black_24dp"/>



</menu>
