...

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <EditText
                    android:id="@+id/username"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:autofillHints="@string/prompt_email"

                    android:hint="@string/prompt_email"
...
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"

                    android:autofillHints="@string/prompt_password"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/prompt_password"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/login"
                android:layout_width="200dp"

                android:layout_height="wrap_content"

                android:background="@drawable/button"
                android:enabled="false"
...
