<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:id="@+id/fragment_venues">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/blackout_1"
            android:foregroundTint="@color/colorPrimary"
            android:text="Venues"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/indoor"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/indoor"
            android:cropToPadding="false"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Indoor Sports Centre"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="23sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/coombe"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/coombe"
            android:cropToPadding="false"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Coombe Dingle Sports Complex"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="23sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingBottom="40dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/richmond"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@drawable/richmond"
            android:cropToPadding="false"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Student Union"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="23sp"/>

    </LinearLayout>

</LinearLayout>